--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
     <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-3 mb-4 border-bottom">
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Главная</a></li>
-        <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">О нас</a></li>
+        <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">Моё портфолио</a></li>
+        <li><a href="{% url 'portfolio_list' %}" class="nav-link px-2 link-dark">Все портфолио</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
