feat(portfolio): добавить tinymce

--- a/portfolio/templates/portfolio/create_portfolio.html
+++ b/portfolio/templates/portfolio/create_portfolio.html
@@ -1,17 +1,25 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block content %}
-<h1>Create Portfolio</h1>
+<h1>Создать портфолио</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
-    <script src="{% static 'tinymce.min.js' %}"></script>
-    <script>
-    tinymce.init({
-        selector: 'textarea#default-editor'
-    });
-    </script>
+
+<script>
+  tinymce.init({
+    selector: 'textarea',
+    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss markdown',
+    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+    tinycomments_mode: 'embedded',
+    tinycomments_author: 'Author name',
+    mergetags_list: [
+      { value: 'First.Name', title: 'First Name' },
+      { value: 'Email', title: 'Email' },
+    ],
+    ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+  });
+</script>
 {% endblock %}
