--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -1,14 +1,20 @@
-
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Portfolio</h1>
+<h1>Все портфолио</h1>
 <ul>
-    {% for item in items %}
-        <li>
-            <strong>{{ item.achievements }}</strong><br>
-            {{ item.description }}
-        </li>
-    {% endfor %}
+    <div class="row">
+        {% for item in items %}
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{ item.user }}</h5>
+              <p class="card-text">{{ item.description|safe }}</p>
+              <a href="{% url 'details_portfolio' item.id %}">Посмотреть подробнее</a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
 </ul>
 {% endblock %}
