--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.tiny.cloud/1/b7r5eo9t31aery4b3v2n0qy1ox23z0uuo3e2r4flqj91m1xw/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -13,8 +14,10 @@
     <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-3 mb-4 border-bottom">
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Главная</a></li>
-        <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">Моё портфолио</a></li>
+        <li><a href="{% url 'my_portfolio' %}" class="nav-link px-2 link-dark">Моё портфолио</a></li>
         <li><a href="{% url 'portfolio_list' %}" class="nav-link px-2 link-dark">Все портфолио</a></li>
+        <li><a href="{% url 'create_portfolio' %}" class="nav-link px-2 link-dark">Создать портфолио</a></li>
+        <li><a href="{% url 'edit_portfolio' %}" class="nav-link px-2 link-dark">Изменить моё портфолио</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
